chgmgmt_build/src/objects/Potential__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>年齢</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>パフォーマンス評価時の従業員の部門</description>
        <label>部門</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>設計管理部</fullName>
                </value>
                <value>
                    <fullName>店舗開発部</fullName>
                </value>
                <value>
                    <fullName>プロモーションサプライ部</fullName>
                </value>
                <value>
                    <fullName>ナショナルマーケティング部</fullName>
                </value>
                <value>
                    <fullName>ピープルディベロップメント部</fullName>
                </value>
                <value>
                    <fullName>リージョナルコントローラー部</fullName>
                </value>
                <value>
                    <fullName>CSR部</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>ポテンシャル評価時の従業員の本部</description>
        <label>本部</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>店舗開発本部</fullName>
                </value>
                <value>
                    <fullName>サプライチェーン本部</fullName>
                </value>
                <value>
                    <fullName>マーケティング本部</fullName>
                </value>
                <value>
                    <fullName>東日本　営業推進部</fullName>
                </value>
                <value>
                    <fullName>コーポレートリレーション本部</fullName>
                </value>
                <value>
                    <fullName>財務本部</fullName>
                </value>
                <value>
                    <fullName>人事本部</fullName>
                </value>
                <value>
                    <fullName>ドナルド・マクドナルド・ハウス</fullName>
                </value>
                <value>
                    <fullName>直営店舗</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeFullName__c</fullName>
        <formula>Employee__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>従業員氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度</relationshipLabel>
        <relationshipName>Potential</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnglishProficiency__c</fullName>
        <label>英語語学力</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advanced</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Pre-Intermediate</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>タレントに関する主要アクション（２,３年後）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Owner:User.Field1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>Owner:User.Field2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像大</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ポテンシャル評価時の従業員のジョブプロファイル</description>
        <label>ジョブプロファイル</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度 (ジョブプロファイル)</relationshipLabel>
        <relationshipName>Potential</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobRelaventExperiences2__c</fullName>
        <label>職務関連の経験2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>４．ターゲットポジションの要件を超えている</fullName>
                </value>
                <value>
                    <fullName>３．ターゲットポジションの要件を満たす（100%）</fullName>
                </value>
                <value>
                    <fullName>２．ターゲットポジションの要件をほぼ満たす（80%程度）</fullName>
                </value>
                <value>
                    <fullName>１．ターゲットポジションの要件を満たさない（80%以下）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagerFullName__c</fullName>
        <formula>Manager__r.FullName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>上司氏名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>上司従業員番号</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度 (上司)</relationshipLabel>
        <relationshipName>PotentialManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>組織</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度</relationshipLabel>
        <relationshipName>Potentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StatusSignal__c</fullName>
        <formula>IMAGE( 
CASE( Field5__c, 
&quot;作成中&quot;, &quot;/img/icon/custom51_100/pencil32.png&quot;,
&quot;上長承認済&quot;, &quot;/img/icon/campaignmember32.png&quot;,
&quot;期末評価済&quot;, &quot;/img/msg_icons/confirm32.png&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>StatusSignal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetPosition2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ターゲットポジション2</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度 (ターゲットポジション2)</relationshipLabel>
        <relationshipName>TargetPosition2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetPosition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ターゲットポジション</label>
        <referenceTo>JobProfile__c</referenceTo>
        <relationshipLabel>ポテンシャル評価／昇進準備度</relationshipLabel>
        <relationshipName>TargetPosition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TargetYear__c</fullName>
        <label>対象年度</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalLeaderShip__c</fullName>
        <label>Total Leader Ship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferPropriety2__c</fullName>
        <label>転勤可否2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1A__c</fullName>
        <inlineHelpText>過去３年間の業績評価について最も適切に表している評価を選択してください。</inlineHelpText>
        <label>過去の業績評価</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>４＝大幅な達成</fullName>
                </value>
                <value>
                    <fullName>３＝達成</fullName>
                </value>
                <value>
                    <fullName>２＝未達</fullName>
                </value>
                <value>
                    <fullName>１＝大幅な未達</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1Atext__c</fullName>
        <label>過去の業績評価コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1B1__c</fullName>
        <label>効果的で率直にコミュニケーションする</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>４＝極めて優秀</fullName>
                </value>
                <value>
                    <fullName>３＝優秀</fullName>
                </value>
                <value>
                    <fullName>２＝機会点あり</fullName>
                </value>
                <value>
                    <fullName>１＝不可</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1B2__c</fullName>
        <inlineHelpText>前回のリーダーシップコンピテンシー評価をもとに評価を記入してください（必要があればアップデート可）</inlineHelpText>
        <label>お客様を最優先する</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>４＝極めて優秀</fullName>
                </value>
                <value>
                    <fullName>３＝優秀</fullName>
                </value>
                <value>
                    <fullName>２＝機会点あり</fullName>
                </value>
                <value>
                    <fullName>１＝不可</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1B3__c</fullName>
        <inlineHelpText>前回のリーダーシップコンピテンシー評価をもとに評価を記入してください（必要があればアップデート可）</inlineHelpText>
        <label>変革と革新をリードする</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>４＝極めて優秀</fullName>
                </value>
                <value>
                    <fullName>３＝優秀</fullName>
                </value>
                <value>
                    <fullName>２＝機会点あり</fullName>
                </value>
                <value>
                    <fullName>１＝不可</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1C1__c</fullName>
        <inlineHelpText>High
多くの期待される行動を頻繁に確認できる。そして、正反対の行動は一貫して見受けられない。

Moderate
期待される行動はほとんど見受けられない。また、正反対の行動がいくつか見受けられる。

Low
期待される行動はほとんど見受けられない。また、正反対の行動がいくつか見受けられる。</inlineHelpText>
        <label>学習志向</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1C2__c</fullName>
        <inlineHelpText>High　多くの期待される行動を頻繁に確認できる。そして、正反対の行動は一貫して見受けられない。
Moderate　いくつかの期待される行動を確認することができるが、その量や頻度においてはまだ機会点が残る。
Low　期待される行動はほとんど見受けられない。また、正反対の行動がいくつか見受けられる。</inlineHelpText>
        <label>リーダーシップ志向</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1C2text__c</fullName>
        <label>リーダーシップ志向コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X1Ctext__c</fullName>
        <label>学習志向コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2Btext__c</fullName>
        <label>職務関連の経験コメント</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2C__c</fullName>
        <inlineHelpText>ターゲットポジションで転勤が必要な場合に限る。</inlineHelpText>
        <label>転勤可否</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2Ctext__c</fullName>
        <inlineHelpText>転勤可能な場合、いつから可能か？</inlineHelpText>
        <label>転勤可能な時期</label>
        <type>TextArea</type>
    </fields>
    <label>ポテンシャル評価／昇進準備度</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TargetYear__c</columns>
        <columns>Employee__c</columns>
        <columns>EmployeeFullName__c</columns>
        <columns>TargetPosition__c</columns>
        <columns>Field1__c</columns>
        <columns>Field3__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>view001</fullName>
        <columns>NAME</columns>
        <columns>TargetYear__c</columns>
        <columns>Employee__c</columns>
        <columns>EmployeeFullName__c</columns>
        <columns>TargetPosition__c</columns>
        <columns>Field1__c</columns>
        <columns>Field3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TargetYear__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>今年度</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>POT-{00000000}</displayFormat>
        <label>ポテンシャル評価No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>